More about phantom jobs

--- a/src/content/docs/crescent/ftb.mdx
+++ b/src/content/docs/crescent/ftb.mdx
@@ -52,41 +52,52 @@ your experience much easier. In no particular order the following phantom jobs a
 <details>
 <summary>List and Explanation of Useful Phantom Jobs</summary>
 - **Phantom Time Mage**:
-**A required phantom job to complete Forked Tower:** Blood. Needed for dispelling specific adds at Demon Tablet, Bridges, and Lockwards. Can also slow a majority of adds throughout Forked Tower.
+_A required phantom job to complete Forked Tower: Blood._ Needed for dispelling specific adds at Demon Tablet, Bridges, and Lockwards. Can also slow a majority of adds throughout Forked Tower.
 
 - **Phantom Geomancer**:
-**A required phantom job to complete Forked Tower:** Blood. Uses Levitate to walk over hazards during Hallways and the Bridges encounter.
+_A required phantom job to complete Forked Tower: Blood._ Uses Levitate to walk over hazards during Hallways and the Bridges encounter. Also uses Battle Bell to buff an individual's damage (namely main tanks, berserkers).
+You can see more about Battle Bell timings on the [in-depth phantom job guides page](/crescent/ftb_pjobs#geomancer)
 
 - **Phantom Bard**:
-**A required phantom job to complete Forked Tower:** Blood. Helps increase a party's damage but noteably uses Romeo's Ballad to stun the Tower Idols during the Bridges encounter. If left unstunned,
-the Idols will instantly wipe the group.
+_A required phantom job to complete Forked Tower: Blood._ Helps increase a party's damage with Offensive Aria and Hero's Rime. Noteably uses Romeo's Ballad to stun the Tower Idols during the Bridges encounter. 
+If left unstunned, the Tower Idols will instantly wipe the group with Ancient Aero 3.
 
 - **Phantom Thief**:
-**A required phantom job to complete Forked Tower:** Blood. Percepts hidden traps and opens locked/hidden passages to help the group earn more Sanguinite. Also uses
-Pilfer Weapon to remove a buff off an enemy during Lockwards.
+_A required phantom job to complete Forked Tower: Blood._ Percepts hidden traps and opens locked/hidden passages to help the group earn more Sanguinite. Also uses
+Pilfer Weapon to remove a buff off an enemy during Lockwards. You can learn more about percepting on the [in-depth phantom job guides page](/crescent/ftb_pjobs#thiefranger)
 
 - **Phantom Berserker**:
-**A required phantom job to complete Forked Tower:** Blood. Used at Magitaur to kill the purple canister with their Rage ability to avoid being afflicted with Hysteria for 60 seconds.
+_A required phantom job to complete Forked Tower: Blood._ Used at Magitaur to kill the purple canister with their Rage ability to avoid being afflicted with Hysteria for 60 seconds.
+A massive DPS carry job if allowed to play into Rage's gimmick of taking damage to deal more damage. You can see more about Rage mit and timings on the [in-depth phantom job guides page](/crescent/ftb_pjobs#berserker)
 
 - **Phantom Chemist**:
 This is your only method of raising outside of Healer Limit Break 3. Progression groups are reccomended to bring a LOT of these for safety.
 
 - **Phantom Knight**:
-Provides a 10% damage mitigation for 30 minutes when using Pray near the knowledge crystal scattered throughout Forked Tower. Knights are also used to tank bosses, adds, and sometimes clear out
-traps due to their Pledge ability. Noteably knights are great at taking the Marble Dragon "Dread Deluge" buster and the Magitaur Cannister's "Arcane Recoil".
+Provides a 10% damage mitigation for 30 minutes when using Pray near a knowledge crystal. Knights are also used to tank bosses, adds, and sometimes clear out
+traps with Pledge. Noteably knights are great at taking the Marble Dragon "Dread Deluge" with Guard and the Magitaur Cannister's "Arcane Recoil" with Guard or Pledge.
 
 - **Phantom Ranger**:
 Can safely detonate/pop traps (hidden or visible) with Occult Falcon. Commonly used to pop the unstable/mega traps hidden throughout, especially on Bridges, so players can safely move around.
 
 - **Phantom Dancer**:
-Free damage increase to the entire raid's damage through Mesmerize's similarly named debuff. Can also increase their party's damage by 2% when using Quickstep near a knowledge crystal.
+Free damage increase to the entire raid's damage through Mesmerize's similarly named debuff. Can also increase their party's damage by 2% when using Quickstep near a knowledge crystal. Mesmerize
+does not stack with cannoneer's Silver Sickness.
+
+- **Phantom Cannoneer**:
+An a lternative to Phantom Dancer. Increases the raid's damage by 5% with **Silver Shot** inflicting Silver Sickness. Mesmerize and Silver Sickness do not stack and will overwrite each other.
 
 - **Phantom Mystic Knight**:
-Free damage increase to the entire raid's damage through Blazing Spellblade's similarly named debuff.
+Free 5% damage increase to the entire raid's damage through Blazing Spellblade's Blazing Bane. Blazing Bane can stack with Mesmerize or Silver Sickness.
 
 - **Phantom Samurai**: 
 Majority of players should be on this phantom job as it's the highest, most consistent DPS phantom job currently available. Using Zeninage in 2 minute bursts along with Iainuki whenever its available. 
-Iainuki can also be used in the Hallways and Lockwards sections to have a 10% chance to instantly kill a mob when hit.  
+Iainuki can also be used in the Hallways and Lockwards sections to have a 10% chance to instantly kill a mob when hit.
+
+- **Oracle, Monk, and Gladiator**:
+More DPS options but they require more work or babysitting to be effective phantom jobs. Phantom Samurai is by far the easiest option for 99% of cases, but agruments can be made for the power
+that these three jobs can bring. Feel free to check out the specific section on the [in-depth phantom job guides page](/crescent/ftb_pjobs) to learn more.
+
 </details>
 
 ### Alliance and Party Set Ups
