--- a/src/content/docs/crescent/southhorn.mdx
+++ b/src/content/docs/crescent/southhorn.mdx
@@ -45,8 +45,41 @@ Map that shows which region contains which level of mobs. Can be useful when try
 <p style="text-align:center; margin-top: 0;">(Click to expand in new window)</p>
 Map Source: <a href="https://x.com/L0VELYJP/status/1927621725056807326" target="_blank">L0VELYJP</a> on Twitter.
 
-<br/><hr/>
+### Weather Based Mobs
+With the changing of weathers in Occult Crescent unique weather specific mobs can appear in various locations around the zone. They are often a much higher level than the mobs around them.
+Of the 6 total weathers, 5 have unique mobs:
+<div style="display:flex; justify-content: center;">
+| Mob | Weather | Uptime % |
+| :---: | :---: | :---: |
+| **N/A** | Fair Skies | 45% |
+| **Crescent Bomb** | Clear Skies | 10% |
+| **Crescent Mousse** | Rain | 10% |
+| **Crescent Dhurva** | Clouds | 15% |
+| **Crescent Mimic** | Atomsphereic Phantasms | 15% |
+| **Crescent Fool** | Illusory Disburances | 5% |
+</div>
 
+:::note[Auroral Mirages]
+Auroral Mirages will not despawn weather specific mobs. The zone's actual weather cycle will remain "active" in the background. A similar behavior is found with Umbral Turbulance (Ovni weather) in Eureka: Hydatos.
+:::
+
+These mobs when killed reward roughly double/triple the gold for their level. This is affected by chaining so a level 28 weather mob can reward up to 48 gold! The only other unique gimmick is that the
+Crescent Fools do wander a set path through the zone.
+
+#### Weather Mobs Location and Level
+<Image
+    src="/oc/weather_mobs.png"
+    width="600"
+    height="400"
+    decoding="async"
+    loading="eager"
+    alt="weather_mobs"
+    onclick="window.open('/oc/weather_mobs.png','_blank')"
+    style="cursor:pointer; display: block !important; margin-left: auto; margin-right: auto;"
+/>
+<p style="text-align:center; margin-top: 0;">(Click to expand in new window)</p>
+
+<br/><hr/>
 ## Occult Records
 This section will spoil all survey points needed to fill out your Occult record book for progressing the story. Its always reccomended to try it yourself first before looking up a guide. 
 A helpful piece of advice is to do this early! Knowledge Level XP cannot be lost at level 5 or lower, so get those aetherytes and explore without a care!
