Fixing random typos

--- a/src/content/docs/crescent/pjobs.mdx
+++ b/src/content/docs/crescent/pjobs.mdx
@@ -40,7 +40,7 @@ The formula for calculating your phantom action damage is follows
 - `Phantom Mastery` is `1.y`, y being the amount of mastery you have times 2 (ex. `1.30` for 15 mastery).
 - `Random` is the variance that goes changes the final value plus/minus 5% (`0.95`-`1.05`)
 
-The factors above will factor in multiplicatively into your phantom action damage as well. So using actions while in raid buff windows can see your damage increase by a lot!
+Raid buffs and other specific traits (enochain, darkside, etc.) will factor in multiplicatively into your phantom action damage as well. So using actions while in 2 minute raid buff windows can increase your damage by a lot!
 
 ### Healing Actions
 Healing actions are much simplier than damage ones. The potency listed on the tooltip is the exact amount of healing you will recieve. Example being a max level Phantom Knight's pray will heal 5,000 potency per tick; 
@@ -50,7 +50,7 @@ The healing potency of phantom actions is influenced by a similar list of factor
 
 ### Shared Action Cooldowns
 Some phantom actions share cooldowns with each other, even if they aren't on the same Phantom Job. While an official reason is not known, we can assume its likely to prevent crazy amounts of buff stacking to be done
-by one person. There is a chart of the current phantom actions and which ones share a cooldown with each other.
+by one person. Below is a chart of the current phantom actions and which ones share a cooldown with each other.
 
 <Image
     src="/oc/actioncds.png"
