Sweeping wording updates, adding rewrads to ftb encounters

--- a/src/content/docs/crescent/ftb.mdx
+++ b/src/content/docs/crescent/ftb.mdx
@@ -23,11 +23,11 @@ The raid consistent of multiple encounters some of which are bosses, others are 
 7. Magitaur
 
 :::caution[Enraging Fights]
-**Demon Tablet, Dead Stars, Bridges, Marble Dragon, and Magitaur** are all considered "enraging fights"
-in which they must be completed within a certain timer; else the boss will enrage and kill the whole group. Forcing everyone to return out to base camp and re-level.
+**Demon Tablet, Dead Stars, Bridges, Marble Dragon, and Magitaur** all have enrages. They must be killed within a certain time;
+else they will kill everyone currently in combat with them.
 :::
 
-Similar with Baldesian Aresenal in Eureka - being made to return out of Forked Tower while dead will force players to lose Knowledge XP and subsequently level down to 19. So be warned! This content is punishing! Though,
+Similar with Baldesian Aresenal in Eureka - being made to return out of Forked Tower while dead will force players to lose Knowledge XP and subsequently level down to 19. So be warned! This content is **punishing**! Though,
 re-leveling is more tedious than anything. Getting back to level 20 requires doing at least 1 CE after patch 7.4's changes to XP loss on return. The biggest loss here is the time of waiting to re-enter Forked Tower.
 
 <br/><hr/>
@@ -167,8 +167,8 @@ Once this timer has elapsed, a few more checks are made before the zone switches
 1. There are at least 24 people of Knowledge Level 20 in the instance.
 2. There are at least 24 people with Forked Tower: Blood unlocked
    - This can be done by progressing past the "Past and Crescent" quest.
-3. There are no critical engagement currently recruiting or in progress.
-   - If you are in an pre-organized group, do not spawn any critical engagement as you will delay the tower spawning.
+3. There are no critical encounter currently recruiting or in progress.
+   - If you are in an pre-organized group, do not spawn any critical encounter as you will delay the tower spawning.
 
 If these three conditions are **NOT** met, the timer will 'pause' in its elapsed state until the conditions are all met--which causes the mirages to spawn instantly.
 
