--- a/src/content/docs/crescent/ftb_encs.mdx
+++ b/src/content/docs/crescent/ftb_encs.mdx
@@ -59,8 +59,12 @@ save on re-leveling time.
 <summary>Fight PoVs</summary>
 - <a href="https://www.youtube.com/watch?v=1D-QL9vkdk4" target="_blank">Viper / p.Sam</a>
 - <a href="https://youtu.be/FH756gtcQ74" target="_blank">Paladin / p.Knight</a>
-
 </details>
+
+:::tip[Rewards]
+- 1x Sanguinite
+- 1x Notes on the Demon Tablet
+:::
 <br/><hr/>
 
 ## Hallways
@@ -94,8 +98,13 @@ If you stand to close to any of these things, you risk dying. Do not waste your 
     style="cursor:pointer; display: block !important; margin-left: auto; margin-right: auto;"
 />
 <p style="text-align:center; margin-top: 0;">(Click to expand in new window)</p>
-<br/><hr/>
 
+:::tip[Rewards]
+- 3x Sanguinite from the North secret room(s)
+- 2x Sanguniite from Thief's Trick Room
+:::
+
+<br/><hr/>
 ## Dead Stars
 - <a href="https://raidplan.io/plan/eb7h5wKdMLui__PV" target="_blank">**Raidplan**</a>
 - <a href="https://docs.google.com/presentation/d/1yh8cJQvk0V2T8IKR5ppYLPX7Q2pbAXEsB81iAc1C3nI/present?slide=id.p" target="_blank">**Google Slides**</a>
@@ -120,10 +129,14 @@ If you stand to close to any of these things, you risk dying. Do not waste your 
 <summary>Fight PoVs</summary>
 - <a href="https://youtu.be/jZrH7kkxVbo" target="_blank">Monk / p.Sam</a>
 - <a href="https://youtu.be/PBOLmnBXtPo" target="_blank">Paladin / p.Knight</a>
-
 </details>
-<br/><hr/>
 
+:::tip[Rewards]
+- 2x Sanguinite
+- 1x Notes on the Dead Stars
+:::
+
+<br/><hr/>
 ## Bridges
 - <a href="https://docs.google.com/presentation/d/1JXFyTkLjPNYXwvOi02Uu9tZPN515onZU2LwNuPyMPR8/present" target="_blank">**Google Slides**</a>
 
@@ -147,7 +160,6 @@ If you stand to close to any of these things, you risk dying. Do not waste your 
 <details>
 <summary>Fight PoVs</summary>
 - <a href="https://youtu.be/tUOvLmTp_0g" target="_blank">Monk / p.Sam</a>
-
 </details>
 
 <br/><hr/>
@@ -173,11 +185,14 @@ If you stand to close to any of these things, you risk dying. Do not waste your 
 <details>
 <summary>Fight PoVs</summary>
 - <a href="https://youtu.be/-XOl2Smt1eE" target="_blank">Monk / p.Sam</a>
-
 </details>
 
-<br/><hr/>
+:::tip[Rewards]
+- 2x Sanguinite
+- 1x Notes on the Marble Dragon
+:::
 
+<br/><hr/>
 ## Lockwards
 - <a href="https://docs.google.com/presentation/d/1x6711dkqAdIJdtE0KuhQVj7Qfa-9GmZonX-DZBR7jdM/present" target="_blank">**Google Slides**</a>
 
@@ -210,10 +225,16 @@ If you stand to close to any of these things, you risk dying. Do not waste your 
 />
 <p style="text-align:center; margin-top: 0;">(Click to expand in new window)</p>
 
+:::tip[Rewards]
+These are *after* you complete the Binding Lock mini-encounter, the amount of chests/rewards depends on if you successfully repaired the lock or not. 
+- 4x Sanguinite from the secret room on the right
+- 1x Sanguinite from the secret room on the left
 
-<br></br>
-<hr></hr>
+If the lock was repaired,
+- 5x Sanguinite from the chest before the observatory, this is hidden behind the left room's chest.
+:::
 
+<br/><hr/>
 ## Magitaur
 - <a href="https://docs.google.com/presentation/d/15Mbb5oVXmfGVErUI1gCce3QZ-AjPNX6D7q1PJ5V4hB8/present?slide=id.p" target="_blank">**Google Slides**</a>
 - <a href="https://mathranger101.itch.io/magitaur-sim" target="_blank">**Magitaur Mechanic Simulator**</a> (browser based game)
@@ -238,4 +259,13 @@ If you stand to close to any of these things, you risk dying. Do not waste your 
 - <a href="https://youtu.be/9L7PZe8DnYk" target="_blank">Monk / p.Sam</a>
 </details>
 
-<br></br>
+:::tip[Rewards]
+- 5x Sanguinite
+- 1x Notes on Magitaur
+- 1x Magituar Triple Triad Card (~25% drop rate)
+
+If the lock was repaired, the Sanguine Recluse spawned, and then killed:
+- 5x Sanguinite from a second chest behind the first
+:::
+
+<br/>
