--- a/src/content/docs/crescent/ftb_pjobs.mdx
+++ b/src/content/docs/crescent/ftb_pjobs.mdx
@@ -1,6 +1,6 @@
 ---
 title: "In-depth Phantom Job Guides"
-description: "Forked Tower: Blood Resources"
+description: "Forked Tower: Blood Phantom Job Guides"
 tableOfContents:
   minHeadingLevel: 2
 ---
