--- a/src/content/docs/crescent/gearing.mdx
+++ b/src/content/docs/crescent/gearing.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Acrcanaut's Gear and Occult Accessories"
+title: "Acrcanaut's Gear & Occult Accessories"
 description: Gearing paths in OC
 tableOfContents:
   minHeadingLevel: 2
