--- a/src/content/docs/crescent/occult.mdx
+++ b/src/content/docs/crescent/occult.mdx
@@ -1,8 +1,8 @@
 ---
 title: Occult Crescent
-description: 7.0 Field Operations
+description: General Occult Crescent Mechanics
 tableOfContents:
-  minHeadingLevel: 1
+  minHeadingLevel: 2
   maxHeadingLevel: 3
 ---
 
@@ -18,11 +18,6 @@ import Footer from '@components/Footer.astro'
   onload="document.documentElement.classList.add('sl-theme-dark');"
 />
 <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.15.1/cdn/shoelace-autoloader.js"></script>
-
-:::danger[*This section is still a work in progress*]
-While information is here and accurate enough to be deployed, the page is not yet totally completed. Please check back later to see a fully completed page!
-:::
-
 Occult Crescent was released in 7.25 is Dawntrail's featured Field Operation similar to the likes of Eureka and Bozja. You will explore the island known as Shades' Triangle which takes inspiration from
 the legend of the real-world Bermueda Triangle.
 
@@ -57,7 +52,7 @@ Similar to Eureka/Bozja there is an entirely different leveling system. This tim
 
 ### Knowledge Level
 <u>Knowledge Level</u> acts as your overall, more general experience level. Knowledge level experience is earned from completing
-FATEs, Critical Engagements, and chaining together mob kills at or above your or your party's overall level. 
+FATEs, Critical Encounters, and chaining together mob kills at or above your or your party's overall level. 
 
 Knowledge level currently caps at 20 and affects the following things: 
 1. what mobs will or will not be aggressive when being near them. 
@@ -70,7 +65,7 @@ If you wish to chain but your party member's levels are uneven, the party leader
 If you are above level 5, dying and returning or leaving the instance without being revived or will cause a loss in knowledge level exp. Your knowledge
 level can decrease this way. The amount of knowledge exp lost is based on your level.
 
-Always shout for a raise if you can!
+Always shout for a raise if you can! However, the penalty for releasing is quite low. Often only needing a singular CE to regain the lost experience.
 :::
 
 #### Knowledge Level v. Mob Level - Damage Taken/Recieved
@@ -96,7 +91,7 @@ Below is a chart that goes over how much damage you take and do to mobs of a cer
 
 ### Phantom Job Level
 <u>Phantom Job Level</u> is specific to the phantom job you currently have equipped. Phantom job experience can be earned from completing
-FATEs, Critical Engagements, and chaining together mob kills at or above your or your party's overall level.
+FATEs, Critical Encounters, and chaining together mob kills at or above your or your party's overall level.
 
 Leveling phantom jobs will not only unlock or upgrade your phantom actions but fully leveling, or "mastering", a phantom job will grant you a stacking mastery bonus for every mastered
 phantom job. This mastery bonus will increase both your damage and healing potency by 2% for each stack.
