--- a/src/content/docs/crescent/ocrelics.mdx
+++ b/src/content/docs/crescent/ocrelics.mdx
@@ -18,7 +18,7 @@ To start the questline for the Phantom Weapons you must first
 From this point you can speak to Lydirceil in the Phantom Village to begin your first one-time grind.
 ### One-Time Grind: Demiatmas
 To complete this quest you need to gather three of each of six different Demiatmas types. These Demiarmas can be earned by completing FATEs with a gold rating in certain Dawntrail zones
-or from FATEs and Critical Engagements (CEs) inside the South Horn. Each region of the South Horn provides a different type of Demiatma to obtain.
+or from FATEs and Critical Encounters (CEs) inside the South Horn. Each region of the South Horn provides a different type of Demiatma to obtain.
 
 :::tip[Demiatma Drop Rates]
 It was revealed in LiveLetter LXXXVII that the drop rates for the demiatmas are currently:
