--- a/src/content/docs/crescent/southhorn.mdx
+++ b/src/content/docs/crescent/southhorn.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Occult Crescent: South Horn"
-description: "Specific information regarding Occult Crescent: South Horn"
+description: "Specific South Horn Information"
 tableOfContents:
   minHeadingLevel: 2
 ---
@@ -14,7 +14,7 @@ import Footer from '@components/Footer.astro'
 While information is here and accurate enough to be deployed, the page is not yet totally completed. Please check back later to see a fully completed page!
 :::
 
-This is the first zone of the Occult Crescent released in patch 7.25 and contains many FATEs, Critical Engagements, and the Forked Tower: Blood. This zone also contains the first half of the
+This is the first zone of the Occult Crescent released in patch 7.25 and contains many FATEs, Critical Encounter, and the Forked Tower: Blood. This zone also contains the first half of the
 story. Completion of the story is not gated by clear the Forked Tower: Blood. 
 
 <br/><hr/>
@@ -209,10 +209,10 @@ You can see a full list of items available to purchase by visiting the Expeditio
 
 <br/><hr/>
 ## Critical Encounters
-Critical Encounters, or CEs from here on, are the older sibling to FATEs. These battles are against a much more fierce foe and can sometimes reward new Phantom Jobs, field records, as well as more experience and silver.
+Critical Encounter, or CEs from here on, are the older sibling to FATEs. These battles are against a much more fierce foe and can sometimes reward new Phantom Jobs, field records, as well as more experience and silver.
 CEs are broken in two kinds, ones that can be spawned by the player and ones that spawn randomly without player input. The rewards are the same regardless of spawn method however.
 
-Every successful Critical Engagement will reward the following
+Every successful Critical Encounter will reward the following
  - 200-23,400 Knowledge XP (scales to your knowledge level)
  - 480 Phantom Job XP
  - 20 uncapped tomestones
@@ -253,7 +253,7 @@ All CEs listed below are spawned by killing a specific mob until it spawns. If i
 <br/><hr/>
 ## FATEs
 These are just like FATEs in the overworld. Just show up, do the required objective, and move on. 
-These are much smaller in scale compared to the critical engagement counterpart and often only take a fraction of the time to complete. 
+These are much smaller in scale compared to the critical encounter counterpart and often only take a fraction of the time to complete. 
 There are no knowledge level or phantom job level requires to participate in any FATEs around Occult Crescent. Just show up and fight!
 
 Every successful FATE you complete with a **gold** rating will reward the following
