English may be my first language but its certainly my worst

--- a/src/content/docs/crescent/occult.mdx
+++ b/src/content/docs/crescent/occult.mdx
@@ -62,8 +62,8 @@ Knowledge level currently caps at 20 and affects the following things:
 If you wish to chain but your party member's levels are uneven, the party leader can choose to sync everyone's levels; allow chaining to be possible.
 
 :::danger[Incapacitation Penality]
-If you are above level 5, dying and returning or leaving the instance without being revived or will cause a loss in knowledge level exp. Your knowledge
-level can decrease this way. The amount of knowledge exp lost is based on your level.
+If you are above level 5, dying and returning or leaving the instance without being revived will cause a loss in knowledge level exp. Your knowledge
+level can be decreased this way. The amount of knowledge exp lost is based on your level.
 
 Always shout for a raise if you can! However, the penalty for releasing is quite low. Often only needing a singular CE to regain the lost experience.
 :::
