added infi's occult tracker

--- a/src/content/docs/crescent/occult.mdx
+++ b/src/content/docs/crescent/occult.mdx
@@ -98,10 +98,10 @@ phantom job. This mastery bonus will increase both your damage and healing poten
 
 <br/><hr/>
 ## Gear Progression
-This Field Op we are currently able to obtain Arcanaut's gear and Occult Accessories. Both of these help you grow more powerful through stacking Special Attribute and bonus main stat (str, dex, mind, etc.) on those pieces
-of gear.
+This Field Op we are currently able to obtain Arcanaut's gear and Occult Accessories. Both help you grow more powerful through their "Occult Crescent Effect" which grants 
+Special Attribute and bonus main stat (str, dex, mind, etc.).
 
-Arcanaut's gear is purchased with silver and occult accessories can be rarely found when completeting critical encounters, opening coffers,
+Arcanaut's gear is purchased with englightenment silver pieces from the Expedition Antiquarian in base camp. Occult accessories can be rarely found when completeting critical encounters, opening coffers,
 finding gold pot chests, and fortune carrot chests.
 
 To read more about gearing, please [visit the page all about gearing](/crescent/gearing)
@@ -109,7 +109,8 @@ To read more about gearing, please [visit the page all about gearing](/crescent/
 <br/><hr/>
 ## FATEs and CEs
 Occult also draws parallels to Bozja in that there are smaller, faster encounters using the FATE system and then larger, more intense battles through Critical Encounters (CEs). It further mixes Eureka and Bozja
-together by allowing certain CEs to be spawned, or "prepped", by killing a specific mobs to spawns specific Critical Encounters. Currently, CEs are mixed in that some automatically spawn and others spawn by players prepping mobs.
+together by allowing certain CEs to be spawned, or "prepped", by killing a specific mobs to spawns specific Critical Encounters. Currently, CEs are mixed in that some 
+automatically spawn and others spawn by players prepping mobs.
 
 FATEs and CEs can be found on your map in either blue (FATEs) or red (CEs) circles. A chime will play when a CE spawns as well.
 
@@ -122,6 +123,12 @@ To join a Critical Encounter you must walk to the designated area and stand in t
 recruitment period the CE will place everyone present into the encounter and begin combat.
 - [South Horn Critical Encounters](/crescent/southhorn#critical-encounters)
 - [South Horn FATEs](/crescent/southhorn#FATEs)
+
+### Tracking FATEs and Critical Encounters
+You can use Infi's Occult Tracker website to help you keep track of which FATEs and CEs has spawned and which are still on the horizon. This site will also help you know which encounters drop what rewards 
+(notes, demiatmas, etc.) along with which CEs can be spawned by players. Detailing which mobs and where the mobs are located.
+
+- <a href="https://tracker.infi.ovh/" target="_blank">https://tracker.infi.ovh/</a>
 
 <br/><hr/>
 ## Mobs and Chaining
