--- a/src/content/docs/crescent/ftb_encs.mdx
+++ b/src/content/docs/crescent/ftb_encs.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Encounter Guides"
-description: "Forked Tower: Blood Resources"
+description: "Forked Tower: Blood Encounter Guides"
 tableOfContents:
   minHeadingLevel: 2
 ---
@@ -101,7 +101,7 @@ If you stand to close to any of these things, you risk dying. Do not waste your 
 
 :::tip[Rewards]
 - 3x Sanguinite from the North secret room(s)
-- 2x Sanguniite from Thief's Trick Room
+- 2x Sanguinite from Thief's Trick Room
 :::
 
 <br/><hr/>
@@ -263,9 +263,12 @@ If the lock was repaired,
 - 5x Sanguinite
 - 1x Notes on Magitaur
 - 1x Magituar Triple Triad Card (~25% drop rate)
+- Access to the Secluded Stacks
+   - Extra Survey point for your Occult Record book
+   - Extra lore
+   - Cool GPose spot
 
-If the lock was repaired, the Sanguine Recluse spawned, and then killed:
+If the lock was repaired, Sanguine Recluse spawned, and then defeated before Magitaur:
 - 5x Sanguinite from a second chest behind the first
 :::
-
 <br/>
