--- a/src/content/docs/crescent/southhorn.mdx
+++ b/src/content/docs/crescent/southhorn.mdx
@@ -250,6 +250,12 @@ All CEs listed below are spawned by killing a specific mob until it spawns. If i
 | Calamity Bound      | Cloister Demon        | Crescent Inkstains  | (X: 14, Y: 35) | Story Progression, Field Notes | 
 </div>
 
+### Tracking FATEs and Critical Encounters
+You can use Infi's Occult Tracker website to help you keep track of which FATEs and CEs has spawned and which are still on the horizon. This site will also help you know which encounters drop what rewards 
+(notes, demiatmas, etc.) along with which CEs can be spawned by players. Detailing which mobs and where the mobs are located.
+
+- <a href="https://tracker.infi.ovh/" target="_blank">https://tracker.infi.ovh/</a>
+
 <br/><hr/>
 ## FATEs
 These are just like FATEs in the overworld. Just show up, do the required objective, and move on. 
